package edu.fiuba.algo3.modelo;

public interface Respuesta {
    ListaOpciones getOpcionesSeleccionadas();

    Opcion getOpcionSeleccionada();

    ListaOpciones getOpcionesSeleccionadasGrupoA();

    ListaOpciones getOpcionesSeleccionadasGrupoB();
}
